tests/snapshots/examples_fixtures/diagnostics_demos__errors__unknown_infix_operator_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics_demos/errors/unknown_infix_operator_error.flx
== compile ==
failed (parse)
== diagnostics ==
error[E031]: Expected Expression

Expected expression, found `%`.

  examples/diagnostics_demos/errors/unknown_infix_operator_error.flx:3:4
  |
3 | 1 %% 2;
  |    ^
== stdout ==
<not executed>
